Java 1.8 build fixes.